--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,32 @@
+dist: trusty
+
 before_install:
-    - sudo apt-get -qq update
-    - sudo apt-get install python3-dev 
-    - sudo apt-get install python3-pip
-    - sudo pip3 install Django
-    - sudo pip3 install bottle
-    - sudo pip3 install Flask
+  - set -e
+  - rustup self update
+  - "if [ ${TRAVIS_OS_NAME} == 'osx' ]; then brew upgrade python; fi"
+  - sudo pip3 install Django
+  - sudo pip3 install bottle
+  - sudo pip3 install Flask
+
+addons:
+    apt:
+        packages:
+            - python3-dev
+            - python3-pip
 language: rust
-rust:
-  - stable
-  - beta
-  - nightly
 matrix:
+  include:
+
+    - env: TARGET=x86_64-unknown-linux-gnu
+    - env: TARGET=x86_64-apple-darwin
+      os: osx
+          # Testing other channels
+    - env: TARGET=x86_64-unknown-linux-gnu
+      rust: nightly
+    - env: TARGET=x86_64-unknown-linux-gnu
+      rust: beta
+
   allow_failures:
     - rust: nightly
 script:
-  - cargo build --verbose --all
   - cargo test --verbose --all -- --test-threads=1
